src/styles/AccountMenu.css
.label-holder {
  position: relative;
}
  
.label-holder .form-label {
  position: absolute;
  left: 13px;
  top: 6px;
}
  
.label-holder .form-label span {
  display: inline-block;
  min-width: 5px;
  transition: 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
}
  
.label-holder:focus-within .form-label span,
.label-holder.has-text .form-label span {
  color: rgb(0, 174, 255);
  transform: translateY(-28px);
}
  
.label-holder input:focus-within {
  outline: none;
  box-shadow: none;
}
  
.label-holder .form-label {
  pointer-events: none;
}
  
.account-menu {
  position: fixed;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.5em;
  right: 1em;
  top: 6.64em;
  width: 300px;
  height: 384px;
  z-index: 1050;
  opacity: 0;
  transition: opacity 0.15s ease;
  display: None;
}
  
.account-menu.active {
  display: block;
  background-color: #e6e6e6;
  opacity: 1;
}
  
.account-menu.active::after {
  content: "";
  position: absolute;
  top: -15px;
  right: 8.6em;
  border-left: 14px solid transparent;
  border-right: 14px solid transparent;
  border-bottom: 20px solid #e6e6e6;
  z-index: 1050;
}
  
.alert {
  opacity: 1;
  transition: opacity 0.5s ease;
}
  
.alert.fade-out {
  opacity: 0;
}
  
.upper-box {
  background-color: #d4d4d4;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 50px;
  margin-bottom: 10px;
}
  
.links {
  display: block;
  margin-bottom: 20px;
  color: #585858;
  text-decoration: none;
}
  
.links:hover {
  color: rgb(5, 5, 5);
  text-decoration: underline
}
  
.sign-in {
  margin-top: 1em;
}
  

.menu-holder {
  padding-top: 1%;
  padding-left: 35%;
  padding-right: 35%;
}

.center-container {
  margin-top:20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

